--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -1,15 +1,11 @@
-.text-field {
-    margin: 24px 0;
-}
-
-.text-field label {
+.drop-down label {
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
 }
 
-.text-field input {
-    background-color: #FFF;
+.drop-down select {
+    background-color: #fff;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     width: 100%;
     border: none;
